--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
     implementation 'com.google.code.gson:gson:2.6.2'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
