--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //PhilJay MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
